src/objects/smagicinteract__Incoming_SMS__c.object
<CustomObject>
    <customHelpPage>smagicinteract__SMSMagicHelp</customHelpPage>
    <fields>
        <fullName>Mobile_Number_Formatted__c</fullName>
        <description>Converts UK mobile number to 07490168640 format (For example: 447490168640 -&gt; 07490168640).
The formatting needs for comparing the value with Mobile number fields on Contact/Lead object.</description>
        <formula>IF(BEGINS(smagicinteract__Mobile_Number__c, &apos;+44&apos;), &apos;0&apos; + MID(smagicinteract__Mobile_Number__c, 4, LEN(smagicinteract__Mobile_Number__c)), IF(BEGINS(smagicinteract__Mobile_Number__c, &apos;44&apos;), &apos;0&apos; + MID(smagicinteract__Mobile_Number__c, 3, LEN(smagicinteract__Mobile_Number__c)), smagicinteract__Mobile_Number__c))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Mobile Number Formatted</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>smagicinteract__Campaign__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Campaign</label>
        <referenceTo>Campaign</referenceTo>
        <relationshipLabel>Incoming SMS</relationshipLabel>
        <relationshipName>Incoming_SMS</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>smagicinteract__Case__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Case</label>
        <referenceTo>Case</referenceTo>
        <relationshipLabel>Incoming SMS</relationshipLabel>
        <relationshipName>Incoming_SMS</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>smagicinteract__Contact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Incoming SMS</relationshipLabel>
        <relationshipName>Incoming_SMS</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>smagicinteract__Favourite__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Favourite</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>smagicinteract__Inbound_Number__c</fullName>
        <description>You can receive incoming sms to this number.</description>
        <label>Inbound Number</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>smagicinteract__Lead__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Lead</label>
        <referenceTo>Lead</referenceTo>
        <relationshipLabel>Incoming SMS</relationshipLabel>
        <relationshipName>Incoming_SMS</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>smagicinteract__MMS_Type__c</fullName>
        <label>Message Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>SMS</fullName>
                    <default>true</default>
                    <label>SMS</label>
                </value>
                <value>
                    <fullName>MMS</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>smagicinteract__MMS_Url__c</fullName>
        <label>MMS Url</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>smagicinteract__Mobile_Number__c</fullName>
        <label>Mobile Number</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>smagicinteract__New__c</fullName>
        <defaultValue>false</defaultValue>
        <label>New</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>smagicinteract__Quick_Reply_URL__c</fullName>
        <label>Quick Reply URL</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>smagicinteract__SMS_Text__c</fullName>
        <label>SMS Text</label>
        <length>4000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>smagicinteract__Sent_By__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Sent By</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Incoming_SMS</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>smagicinteract__User__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>User</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Incoming_SMS1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>smagicinteract__actionTaken__c</fullName>
        <label>actionTaken</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>smagicinteract__external_field__c</fullName>
        <caseSensitive>true</caseSensitive>
        <externalId>true</externalId>
        <label>external field</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>smagicinteract__taskId__c</fullName>
        <label>taskId</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <label>Incoming SMS</label>
    <listViews>
        <fullName>smagicinteract__All</fullName>
        <columns>NAME</columns>
        <columns>smagicinteract__Inbound_Number__c</columns>
        <columns>smagicinteract__Mobile_Number__c</columns>
        <columns>smagicinteract__Lead__c</columns>
        <columns>smagicinteract__Contact__c</columns>
        <columns>smagicinteract__SMS_Text__c</columns>
        <columns>smagicinteract__actionTaken__c</columns>
        <columns>smagicinteract__external_field__c</columns>
        <columns>CREATED_DATE</columns>
        <columns>LAST_UPDATE</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>I-{00000000}</displayFormat>
        <label>Incoming SMS Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Incoming SMS</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>